React integrated into docker!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,17 @@ services:
       - NODE_ENV=production
     ports:
       - "8888:8888"
+  frontend:
+    build:
+      context: frontend
+      target: development
+    ports:
+      - 3000:3000
+    volumes:
+      - ./frontend/src:/code/src
+      - /code/node_modules
+    depends_on:
+      - node_server
 
 volumes:
   workout-mysql-data:
