--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,6 @@
-FROM node:19-bullseye
-WORKDIR /app
-COPY package.json .
-RUN npm install
-COPY . .
+FROM node:lts AS development
+WORKDIR /code
+COPY package.json /code/package.json
+COPY package-lock.json /code/package-lock.json
+COPY . /code
+CMD [ "npm", "start" ]
