--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:lts AS development
 WORKDIR /code
 COPY package.json /code/package.json
-COPY package-lock.json /code/package-lock.json
+RUN npm install
 COPY . /code
 CMD [ "npm", "start" ]
